@@ -1,3 +1,8 @@
+2005-11-15  Johan Dahlin  <johan@gnome.org>
+
+	* kiwi/ui/widgets/list.py (List._load): Catch StopIteration, in case
+	we have an empty list.
+
 2005-11-14  Gustavo Sverzut Barbieri <barbieri@gmail.com>
 
 	reviewed by: Johan Dahlin  <jdahlin@async.com.br>
